--- a/client_code/endringslogg/form_template.yaml
+++ b/client_code/endringslogg/form_template.yaml
@@ -4,10 +4,15 @@ components:
     name: label_1
     properties: {role: headline, text: Endringslogg}
     type: Label
-  - layout_properties: {grid_position: 'KUHSHX,JBISYT'}
-    name: text_area_18
-    properties: {label: 25/4 Nytt menysystem. Spesielt bra på mobil'}
-    type: form:dep_91t3sowbnwbk:_Components.TextInput.TextArea
+  - layout_properties: {grid_position: 'PSXUEG,VBTFCI'}
+    name: text_area_17_copy
+    properties:
+      font_size: 10
+      height: 55
+      text: |-
+        25/4 Laget nytt menysystem. Penere og mye bedre på mobil
+        Laget nye bokser på dager - som reagerer bedre på klikk.
+    type: TextArea
   - layout_properties: {grid_position: 'FTYVJX,NKFQVW'}
     name: text_area_17
     properties:
