--- a/.anvil_editor.yaml
+++ b/.anvil_editor.yaml
@@ -60,3 +60,4 @@ unique_ids:
   scripts: {}
   server_modules:
     ServerModule1: '1741208220179582550843168.9172'
+    ServerModule2: '1745778811240641393724449.0122'
