--- a/client_code/endringslogg/form_template.yaml
+++ b/client_code/endringslogg/form_template.yaml
@@ -8,6 +8,10 @@ components:
     name: text_area_17_copy_copy
     properties: {font_size: 10, height: 55, text: 27/4 Lagrer poeng og score i tabell om natten for raskere resultatlister. Også for team. Vi ser mer detaljer på team-resultatliste.}
     type: TextArea
+  - layout_properties: {grid_position: 'WCQHBP,XCZLKB'}
+    name: text_area_17_copy_copy_2
+    properties: {font_size: 10, height: 55, text: 26/4 Laget progressbar frem mot deltagelse i trekning}
+    type: TextArea
   - layout_properties: {grid_position: 'PSXUEG,VBTFCI'}
     name: text_area_17_copy
     properties:
