--- a/client_code/Loggbok/form_template.yaml
+++ b/client_code/Loggbok/form_template.yaml
@@ -64,6 +64,7 @@ components_by_slot:
               spacing:
                 padding: [null, '2', null, '2']
               text: ''
+              visible: false
             type: Button
           - event_bindings: {click: deltager_label_click}
             layout_properties: {}
