--- a/client_code/Resultat_individuell/RowTemplate2/form_template.yaml
+++ b/client_code/Resultat_individuell/RowTemplate2/form_template.yaml
@@ -28,6 +28,7 @@ components:
       spacing:
         padding: [null, '2', null, '2']
       text: ''
+      visible: false
     type: Button
   - layout_properties: {width: null}
     name: Deltager_label
