--- a/client_code/team_medlemmer/form_template.yaml
+++ b/client_code/team_medlemmer/form_template.yaml
@@ -15,7 +15,7 @@ components_by_slot:
       type: FlowPanel
     - components:
       - name: team_medl_repeating_panel
-        properties: {item_template: team_medlemmer.RowTemplate4}
+        properties: {item_template: minside.RowTemplate4}
         type: RepeatingPanel
       layout_properties: {grid_position: 'CSGQGC,UEIOJP'}
       name: data_grid_1
