Edited Homepage and minside

--- a/client_code/minside/form_template.yaml
+++ b/client_code/minside/form_template.yaml
@@ -24,7 +24,18 @@ components_by_slot:
         name: flow_panel_3
         properties: {align: center}
         type: FlowPanel
-      - layout_properties: {grid_position: 'BMMPDP,JZFHOE'}
+      - components:
+        - components:
+          - name: team_medl_repeating_panel
+            properties: {item_template: team_medlemmer.RowTemplate4}
+            type: RepeatingPanel
+          name: data_grid_1
+          properties:
+            columns:
+            - {data_key: column_1, id: JKSDUP, title: Teammedlemmer}
+            - {data_key: column_1, id: MHDFRT, title: Poeng}
+          type: DataGrid
+        layout_properties: {grid_position: 'BMMPDP,JZFHOE'}
         name: rich_text_2
         properties:
           align: center
@@ -82,17 +93,6 @@ components_by_slot:
         name: flow_panel_4
         properties: {align: center}
         type: FlowPanel
-      - components:
-        - name: team_medl_repeating_panel
-          properties: {item_template: team_medlemmer.RowTemplate4}
-          type: RepeatingPanel
-        layout_properties: {grid_position: 'TNOUQA,BIUGBG'}
-        name: data_grid_1
-        properties:
-          columns:
-          - {data_key: column_1, id: JKSDUP, title: Teammedlemmer}
-          - {data_key: column_1, id: MHDFRT, title: Poeng}
-        type: DataGrid
       layout_properties: {grid_position: 'HEYYWW,CQSZEU'}
       name: outlined_card_2
       properties: {role: elevated-card}
