--- a/client_code/Loggbok/form_template.yaml
+++ b/client_code/Loggbok/form_template.yaml
@@ -66,7 +66,7 @@ components_by_slot:
               text: ''
               visible: false
             type: Button
-          - event_bindings: {}
+          - event_bindings: {click: deltager_label_click}
             layout_properties: {}
             name: deltager_label
             properties: {text: Donald Duck}
