--- a/anvil.yaml
+++ b/anvil.yaml
@@ -245,6 +245,9 @@ db_schema:
     - admin_ui: {order: 10, width: 200}
       name: score
       type: number
+    - admin_ui: {order: 11, width: 200}
+      name: plassering
+      type: number
     server: full
     title: userinfo
   users:
