--- a/client_code/Loggbok/form_template.yaml
+++ b/client_code/Loggbok/form_template.yaml
@@ -126,8 +126,18 @@ components_by_slot:
           type: Image
         - event_bindings: {}
           layout_properties: {width: 30}
-          name: image_7
-          properties: {height: '30', source: _/theme/grey badge.png, tooltip: '', visible: false}
+          name: badge_7
+          properties: {height: '30', source: _/theme/icons8-first-48.png, tooltip: '', visible: false}
+          type: Image
+        - event_bindings: {}
+          layout_properties: {}
+          name: badge_8
+          properties: {height: '30', source: _/theme/icons8-second-place-ribbon-48.png, tooltip: '', visible: false}
+          type: Image
+        - event_bindings: {}
+          layout_properties: {}
+          name: badge_9
+          properties: {height: '30', source: _/theme/icons8-third-64.png, tooltip: '', visible: false}
           type: Image
         layout_properties: {grid_position: 'FIYLJB,VPKGHN'}
         name: badge_flow_panel
