--- a/client_code/endringslogg/form_template.yaml
+++ b/client_code/endringslogg/form_template.yaml
@@ -6,7 +6,10 @@ components:
     type: Label
   - layout_properties: {grid_position: 'CKYAQZ,ZKDBAY'}
     name: text_area_17_copy_copy_copy
-    properties: {font_size: 10, height: 55, text: 28/4 Menyvalg for minside og mitt lag. Slettet alle data og begynte ny test.}
+    properties:
+      font_size: 10
+      height: 55
+      text: "28/4 Menyvalg for minside og mitt lag. Slettet alle data og begynte ny test.\nLa til plassering i tabellen på bruker og team. ENklere på den måten. \nLaget tre nye badger. Nå er det 9 badger. "
     type: TextArea
   - layout_properties: {grid_position: 'ESIRGB,ERSOYM'}
     name: text_area_17_copy_copy
