--- a/anvil.yaml
+++ b/anvil.yaml
@@ -219,7 +219,7 @@ db_schema:
     - admin_ui: {width: 200}
       name: navn
       type: string
-    - admin_ui: {width: 200}
+    - admin_ui: {order: 2, width: 105}
       name: team
       target: team
       type: link_single
