--- a/client_code/PoengVelger/form_template.yaml
+++ b/client_code/PoengVelger/form_template.yaml
@@ -13,9 +13,18 @@ components_by_slot:
               name: image_1
               properties: {height: 41.5, source: _/theme/icons8-walk-80.png}
               type: Image
-            - name: label_5
-              properties: {align: center, font_size: 12, text: '8000 skritt, eller flere, gir 1 poeng. Du må ha minst 1 poeng i fem dager for å delta i ukens trekning.'}
+            - layout_properties: {}
+              name: label_5
+              properties: {align: center, font_size: 12, text: Du får 1 poeng pr. 8000 skritt. Du må ha minst 1 poeng i fem dager for å delta i ukens trekning.}
               type: Label
+            - name: label_5_copy
+              properties: {align: left, font_size: 12, text: 'Antall skritt:'}
+              type: Label
+            - data_bindings:
+              - {code: '', property: items, writeback: false}
+              name: skritt_drop
+              properties: {}
+              type: DropDown
             layout_properties: {grid_position: 'HRHEEE,JTQHYJ'}
             name: flow_panel_3
             properties: {}
@@ -126,7 +135,7 @@ components_by_slot:
       - event_bindings: {click: lagre_skritt_click}
         layout_properties: {}
         name: lagre_skritt
-        properties: {role: filled-button, text: Jeg har gått minst 8000 skritt i dag}
+        properties: {role: filled-button, text: Lagre skritt}
         type: Button
       layout_properties: {grid_position: 'JDJKYU,DKDGBP'}
       name: skritt_panel_2
