--- a/client_code/endringslogg/form_template.yaml
+++ b/client_code/endringslogg/form_template.yaml
@@ -6,7 +6,12 @@ components:
     type: Label
   - layout_properties: {grid_position: 'DVOSAK,KDDOER'}
     name: text_area_17_copy_copy_copy_copy
-    properties: {font_size: 10, height: 55, text: 29/4 Laget bilde for vedlikehold av badges og propt til disse}
+    properties:
+      font_size: 10
+      height: 55
+      text: |-
+        29/4 Laget bilde for vedlikehold av badges og propt til disse
+        La inn mulighet for poeng pr. 8000 skritt
     type: TextArea
   - layout_properties: {grid_position: 'CKYAQZ,ZKDBAY'}
     name: text_area_17_copy_copy_copy
