--- a/client_code/admin/form_template.yaml
+++ b/client_code/admin/form_template.yaml
@@ -53,7 +53,7 @@ components_by_slot:
         name: sjekk_badges
         properties: {role: tonal-button, text: sjekk badges}
         type: Button
-      - event_bindings: {click: ailogg_click}
+      - event_bindings: {click: badges_button_click}
         layout_properties: {}
         name: badges_button
         properties: {role: tonal-button, text: Badges}
@@ -61,6 +61,11 @@ components_by_slot:
       - event_bindings: {click: button_6_click}
         name: button_6
         properties: {role: tonal-button, text: test ai}
+        type: Button
+      - event_bindings: {click: user_badges_click}
+        layout_properties: {}
+        name: user_badges
+        properties: {role: tonal-button, text: Utdelte badges}
         type: Button
       layout_properties: {grid_position: 'PDOHFX,TLMROV'}
       name: flow_panel_1
