--- a/client_code/endringslogg/form_template.yaml
+++ b/client_code/endringslogg/form_template.yaml
@@ -10,8 +10,9 @@ components:
       font_size: 10
       height: 55
       text: |-
-        29/4 Laget bilde for vedlikehold av badges og propt til disse
+        29/4 Laget adminbilde for vedlikehold av badges og propt til disse
         La inn mulighet for poeng pr. 8000 skritt
+        Laget adminbilde for å se utdelte badges
     type: TextArea
   - layout_properties: {grid_position: 'CKYAQZ,ZKDBAY'}
     name: text_area_17_copy_copy_copy
