--- a/client_code/Loggbok/form_template.yaml
+++ b/client_code/Loggbok/form_template.yaml
@@ -46,7 +46,7 @@ components_by_slot:
               margin: ['0', null, null, null]
               padding: ['0', null, null, null]
           type: Label
-        layout_properties: {grid_position: 'VRDIEX,CGEKVQ'}
+        layout_properties: {grid_position: 'IRRDUT,AHFGFP VRDIEX,CGEKVQ'}
         name: flow_panel_9
         properties: {align: center, role: null}
         type: FlowPanel
@@ -86,7 +86,7 @@ components_by_slot:
           name: flow_panel_10
           properties: {}
           type: FlowPanel
-        layout_properties: {grid_position: 'RFCGDJ,QULDBO'}
+        layout_properties: {grid_position: 'IRRDUT,AHFGFP RFCGDJ,QULDBO'}
         name: flow_panel_3
         properties:
           align: center
@@ -139,7 +139,7 @@ components_by_slot:
           name: badge_9
           properties: {height: '30', source: _/theme/icons8-third-64.png, tooltip: '', visible: false}
           type: Image
-        layout_properties: {grid_position: 'FIYLJB,VPKGHN'}
+        layout_properties: {grid_position: 'IRRDUT,AHFGFP FIYLJB,VPKGHN'}
         name: badge_flow_panel
         properties: {align: center, visible: false}
         type: FlowPanel
