--- a/anvil.yaml
+++ b/anvil.yaml
@@ -219,7 +219,7 @@ db_schema:
     - admin_ui: {width: 200}
       name: navn
       type: string
-    - admin_ui: {order: 2, width: 105}
+    - admin_ui: {order: 9.625, width: 105}
       name: team
       target: team
       type: link_single
@@ -229,7 +229,7 @@ db_schema:
     - admin_ui: {width: 107}
       name: week_offset
       type: number
-    - admin_ui: {width: 200}
+    - admin_ui: {order: 9.25, width: 200}
       name: longest_streak
       type: number
     - admin_ui: {order: 6, width: 200}
@@ -248,8 +248,11 @@ db_schema:
     - admin_ui: {order: 10, width: 200}
       name: score
       type: number
-    - admin_ui: {order: 11, width: 200}
+    - admin_ui: {order: 9.375, width: 200}
       name: plassering
+      type: number
+    - admin_ui: {order: 12, width: 200}
+      name: team_plassering
       type: number
     server: full
     title: userinfo
