--- a/client_code/admin/form_template.yaml
+++ b/client_code/admin/form_template.yaml
@@ -67,6 +67,11 @@ components_by_slot:
         name: user_badges
         properties: {role: tonal-button, text: Utdelte badges}
         type: Button
+      - event_bindings: {click: test_user_status_click}
+        layout_properties: {}
+        name: test_user_status
+        properties: {role: tonal-button, text: test user status}
+        type: Button
       layout_properties: {grid_position: 'PDOHFX,TLMROV'}
       name: flow_panel_1
       properties: {align: center}
