--- a/anvil.yaml
+++ b/anvil.yaml
@@ -292,6 +292,9 @@ dependencies:
 - dep_id: dep_91t3sowbnwbk
   resolution_hints: {app_id: 4UK6WHQ6UX7AKELK, name: Material 3 Theme, package_name: m3}
   version: {version_tag: v1.2.3}
+- dep_id: dep_f5o4wvd4wmhr6n
+  resolution_hints: {app_id: C6ZZPAPN4YYF5NVJ, name: Anvil Extras, package_name: anvil_extras}
+  version: {version_tag: v3.1.0}
 metadata: {description: For Framo BIL, logo_img: 'asset:walking.svg', title: Framskritt}
 name: Aktivitet
 native_deps: null
